Fix support request on mobile

--- a/tapjoyads/public/stylesheets/sass/games/style.scss
+++ b/tapjoyads/public/stylesheets/sass/games/style.scss
@@ -169,6 +169,14 @@ a, a:visited {
   width: 460px;
 }
 
+.mobile #support_request .content_box {
+  width: 305px;
+}
+
+.mobile #support_request textarea {
+  width: 270px;
+}
+
 #support_request .content_box {
   width: 350px;
 }
